🐛 Fixed the issue where the divider was not visible

--- a/styles/components/_product-section.scss
+++ b/styles/components/_product-section.scss
@@ -1,7 +1,7 @@
 .product-section {
   padding-bottom: 20px;
 
-  .product-section-divider {
+  &-divider {
     height: 8px;
     margin: 0 -#{$grid-margin};
     background-color: $border;
